# dualsense-controller-python

./: .gitignore
hidapi-py/: CMakeLists.txt
hidapi-py/includes/: hid_device.h  hid_device_info.h
hidapi-py/src/: bindings.cpp
scripts/: build_win_debug.ps1  set_env.ps1
src/dualsense_controller/: __init__.py
src/dualsense_controller/api/: DualSenseController.py  contextmanager.py
src/dualsense_controller/api/property/: ButtonProperty.py  base.py
src/dualsense_controller/core/: DualSenseControllerCore.py  HidControllerDevice.py  log.py  util.py
src/dualsense_controller/core/core/: Lockable.py
src/dualsense_controller/core/hidapi/: __init__.py  enumerate.py
src/dualsense_controller/core/report/in_report/: InReport.py
src/dualsense_controller/core/state/: BaseStates.py  State.py  typedef.py
src/dualsense_controller/core/state/mapping/: typedef.py
src/dualsense_controller/core/state/read_state/: ReadState.py  ReadStates.py  ValueCalc.py  ValueCompare.py  more_read_states.py
src/dualsense_controller/core/state/write_state/: WriteStates.py
src/examples/: example_simple.py
